--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>Mijn website</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam voluptates officiis, nam eius libero consectetur laboriosam accusamus nemo, vel nesciunt eaque ab in magnam aspernatur tempora reiciendis. Rerum accusamus incidunt porro voluptates velit ipsam animi nobis? Maiores unde inventore fuga nihil commodi voluptatibus corporis, labore aliquid, consequatur, ipsa iusto facere!</p>
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est, tenetur.</p>
+  <p>hallo!</p>
 </body>
 </html>
