--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <h1>Mijn website</h1>
   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est, tenetur.</p>
   <p>hallo!</p>
+  <p>nog een edit</p>
 </body>
 </html>
