--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
   <h1>Mijn website</h1>
   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est, tenetur.</p>
-  <p>hallo!</p>
-  <p>nog een edit</p>
+  <p>bye!</p>
 </body>
 </html>
