--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1>Mijn website</h1>
-  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est, tenetur.</p>
+  <p>Uhh</p>
 </body>
 </html>
